# silveraiwolf-learning

./: .gitignore  README.md
curriculum/tracks/databricks/project_01_news_classifier/: .gitignore  MLproject  Makefile  README.md  check_versions.py  cleanup.py  conda.yaml  pyproject.toml  run_all_experiments.py
curriculum/tracks/databricks/project_01_news_classifier/config/: .env.example  news_categories.py
curriculum/tracks/databricks/project_01_news_classifier/docs/: finding-model-endpoints.md  notebooks-vs-mlproject.md
curriculum/tracks/databricks/project_01_news_classifier/notebooks/: 01_eda_news_classifier.ipynb  README.md
curriculum/tracks/databricks/project_01_news_classifier/scripts/: check_experiments.py  daily_inference.py  promote_to_production.py
curriculum/tracks/databricks/project_01_news_classifier/track_a_external/: __init__.py  experiment_external.py  external_agent.py
curriculum/tracks/databricks/project_01_news_classifier/track_b_internal/: __init__.py  experiment_internal.py  internal_agent.py
curriculum/tracks/databricks/project_01_news_classifier/utils/: __init__.py  databricks_auth.py  mlflow_helpers.py  production_criteria.py
docs/mcp/: mcp-full.txt  mcp.txt
tutorials/agentic-engineering/: .gitignore
tutorials/agentic-engineering/.claude/plugins/silver-databricks-agents/project-template/: .env.sample  .gitignore  databricks.yml  mise.toml  model_config.yaml  pyproject.toml
tutorials/agentic-engineering/.claude/plugins/silver-databricks-agents/project-template/data/bootstrap/: create_gold_tables.py  seed_gold_data.py
tutorials/agentic-engineering/.claude/plugins/silver-databricks-agents/project-template/notebooks/: 01_explore_agent.py  02_evaluate_agent.py
tutorials/agentic-engineering/.claude/plugins/silver-databricks-agents/project-template/sql/: create_gold_tables.sql  create_schema.sql  create_uc_functions.sql  drop_all.sql
tutorials/agentic-engineering/.claude/plugins/silver-databricks-agents/project-template/src/risk_agent/: agent.py  align.py  app.py  config.py  evaluate.py  optimize.py  register.py
tutorials/agentic-engineering/.claude/plugins/silver-databricks-agents/project-template/src/risk_agent/tools/: financial_ratios.py  portfolio_summary.py  portfolios.py  risk_exposure.py
tutorials/agentic-engineering/.claude/plugins/silver-databricks-streaming/project-template/: .env.sample  .gitignore  databricks.yml  mise.toml  pyproject.toml
tutorials/agentic-engineering/.claude/plugins/silver-databricks-streaming/project-template/data/: seed.sql
tutorials/agentic-engineering/.claude/plugins/silver-databricks-streaming/project-template/infra/: docker-compose.yml  mise.toml
tutorials/agentic-engineering/.claude/plugins/silver-databricks-streaming/project-template/infra/opensearch-sink/: Dockerfile  pyproject.toml  sink.py
tutorials/agentic-engineering/.claude/plugins/silver-databricks-streaming/project-template/infra/terraform/: main.tf  outputs.tf  terraform.tfvars.sample  user-data.sh  variables.tf
tutorials/agentic-engineering/.claude/plugins/silver-databricks/project-template/: .actrc  .env.sample  .gitignore  databricks.yml  mise.toml  pyproject.toml
tutorials/agentic-engineering/.claude/plugins/silver-databricks/project-template/.github/workflows/: cd.yml  ci.yml
tutorials/agentic-engineering/.claude/plugins/silver-databricks/project-template/data/: generate_seed_data.py
tutorials/agentic-engineering/.claude/plugins/silver-databricks/project-template/explorations/: 01_data_exploration.py  02_ratio_prototyping.py
tutorials/backends/fastapi/: helper.py  (+2 more)
tutorials/backends/fastapi/strawberry/: .dockerignore  .mise.toml  Dockerfile  Makefile  README.md  TUTORIAL.md  docker-compose.dev.yml  env.example  env.prod.example  init_db.py  pyproject.toml
tutorials/backends/fastapi/strawberry/app/: config.py  schema.py  shema.py
tutorials/backends/fastapi/strawberry/app/db/: postgres.py
tutorials/backends/fastapi/strawberry/app/models/: __init__.py  inventory.py  product.py  supplier.py
tutorials/backends/fastapi/strawberry/app/resolvers/: inventory.py  product.py  suppliers.py
(+143 files in other folders)
