[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-risk-agent"
version = "0.1.0"
description = "Financial risk analysis agent powered by Databricks Foundation Models and Unity Catalog tools"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.38",
    "mlflow[genai]>=2.18",
    "databricks-agents>=0.12",
    "openai>=1.0",
    "dspy>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "chispa>=0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/risk_agent"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
